issue fix for chat/email/call issue some alignment fix

--- a/HexiCloud/public_html/css/hc-techSupport.css
+++ b/HexiCloud/public_html/css/hc-techSupport.css
@@ -8,31 +8,42 @@ and open the template in the editor.
     Author     : shiva
 */
 
-@media screen and (max-width: 767px){
+/*@media print and (orientation: landscape), screen and (max-width: 767px){
     .tech-support-container {
         right: -30px !important;
-        height: 85%;
         overflow-y: auto;
-/*        top: 80px;*/
+    }
+    
+    
+    .tech-support-container .navContainer input, .tech-support-container .navContainer textArea{
+        width: 91% !important;
+    }
+
+}*/
+
+
+@media print and (orientation: portrait), screen and (max-width: 767px){
+    .tech-support-container {
+/*        right: -30px !important;*/
+        height: calc(100% - 85px);
+        overflow-y: auto;
     }
     .tech-support-container .phoneContainer {
-        width: 95% !important;
+        width: 100% !important;
     }
     .tech-support-container .phone-submit-btn.oj-button,
     .tech-support-container .phone-submit-btn.oj-button.oj-hover{
         padding: 0px 38px !important;
         margin-right: 10px !important;
     }
-    .tech-support-container .navContainer input, .tech-support-container .navContainer textArea{
-        width: 85% !important;
-    }
+
     .tech-support-container .material-icons {
            padding: 10px !important;
            margin-right: 10px !important;
     }
      .square .material-icons
     {
-            right: 14px !important;
+            right: -8px !important;
     }
     .tech-support-container .phone-submit-btn.oj-button,
     .tech-support-container .phone-submit-btn.oj-button.oj-hover{
@@ -58,7 +69,7 @@ and open the template in the editor.
     .tech-support-container .navContainer input, .tech-support-container .navContainer textArea{
         margin-top: 10px !important; 
         line-height: none !important;
-        width: 85% !important;
+/*        width: 85% !important;*/
     }
     .tech-support-container .material-icons {
             padding: 10px !important;
@@ -66,13 +77,11 @@ and open the template in the editor.
     }
     .square .material-icons
     {
-        right: 8px !important;
+        right: -8px !important;
         top: 9px !important;
         width: 10px !important;
     }
-    .tech-support-container .phoneContainer {
-        width: 94% !important;
-    }
+    
     .tech-support-container .phone-submit-btn.oj-button,
     .tech-support-container .phone-submit-btn.oj-button.oj-hover{
         padding: 0px 23px !important;
@@ -84,7 +93,7 @@ and open the template in the editor.
 
 .tech-support-container {
     position: fixed;
-    right: 20px;
+    right: 0;
     bottom: 0;
     background-color: white;
     padding-right: 20px;
@@ -140,7 +149,8 @@ and open the template in the editor.
     border: none;
     padding: 15px;
     background-color: #eaeef0;
-    width: 90%;
+/*    width: 90%;*/
+width: calc(100% - 30px);
     margin-top: 20px;
     height: 20px;
     font-size: 14px;
@@ -153,7 +163,7 @@ and open the template in the editor.
 
 .tech-support-container .email-submit-btn.oj-button,
 .tech-support-container .email-submit-btn.oj-button.oj-hover{
-    margin-right: 27px;
+/*    margin-right: 27px;*/
     margin-top: 45px;
     font-size: 18px;
     padding: 0px 45px;
@@ -231,7 +241,7 @@ and open the template in the editor.
     height: 25px;
     padding: 8px 24px 17px 6px !important;
     position: absolute;
-    right: 11px;
+    right: 0;
     top: 19px;
     cursor: pointer;
 }
